# arabic-benchmark

./: CHANGELOG.md  README.md  VERIFICATION.md  pyproject.toml
src/arabic_benchmark/: __init__.py  __main__.py  _corpus.py  _pipelines.py  _report.py  _retrieval.py  _runner.py  _tokenizer.py
tests/: test_benchmark.py
tests/real_world/: ocr_roundtrip.py  pdf_roundtrip.py
