[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arabic-benchmark"
version = "0.1.0"
description = "Benchmark proving the visual-order reordering gap in Arabic NLP pipelines"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MPL-2.0" }
authors = [{ name = "Bandar AlSwyan" }]
requires-python = ">=3.9"
dependencies = [
    "arabic-rt>=0.1.3",
    "arabic-repair>=0.1.0",
]

[project.optional-dependencies]
tokenizer  = ["tiktoken"]
retrieval  = ["sentence-transformers"]
all        = ["tiktoken", "sentence-transformers"]

[project.scripts]
arabic-benchmark = "arabic_benchmark.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arabic_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
